create preprocessing script, added processed json,  AI classification ok

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -11,7 +11,14 @@
 </head>
 
 <body>
-    <h1>Server Running at Port 5000</h1>
+    <form method="GET" action="/run">
+        <div>
+          <span> CLick to Train and Predict:</span>
+          <div>
+            <button type="submit">Run</button>
+          </div>
+        </div>
+      </form>
 </body>
 
 </html>
