--- a/react-client/src/App.css
+++ b/react-client/src/App.css
@@ -447,7 +447,7 @@ table th {
 
 .card-container {
   border-radius: 5px;
-  max-width: 1200px;
+  max-width: 1300px;
   margin: auto;
   margin-top: 50px;
   padding: 22px;
@@ -466,11 +466,23 @@ table th {
   padding: 22px;
   background-color: #f1f1f1;
   box-shadow: 0 4px 8px 0 #00000033;
-  max-width: 50%;
+}
+
+.card-clinical {
+  border-radius: 5px;
+  margin: auto;
+  margin-top: 50px;
+  padding: 22px;
+  background-color: #f1f1f1;
+  box-shadow: 0 4px 8px 0 #00000033;
 }
 
 .label-bold {
   font-weight: bold;
+}
+
+.row-padding {
+  margin-top: 15px;
 }
 
 
